Fix several issues.
- one2many tags now not hidden behind inputs.
- Drawer icons now with much better look.
- No overflow bug in small views when closing drawer.
  - Documented it when resizing viewport.

--- a/web_app_drawer/static/src/less/app_drawer.less
+++ b/web_app_drawer/static/src/less/app_drawer.less
@@ -29,9 +29,12 @@
     }
 
     .app-drawer-icon-app {
-        height: @app-drawer-icon-size;
-        width: @app-drawer-icon-size;
-        margin: @app-drawer-icon-margin;
+        height: 100%;
+        width: 100%;
+        max-width: @app-drawer-icon-size;
+        max-height: @app-drawer-icon-size;
+        object-fit: contain;
+        object-position: center;
     }
 
     .panel-body {
