--- a/web_app_drawer/static/src/less/variables.less
+++ b/web_app_drawer/static/src/less/variables.less
@@ -2,7 +2,7 @@
  * License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). */
 
 // App Drawer / Icons
-@app-drawer-icon-size:      7em;
+@app-drawer-icon-size:      6em;
 @app-drawer-icon-margin:    1em;
 @app-drawer-width:          80%;
 @app-drawer-title-height:   @navbar-height;
